# learned_hologram_gan

./: .gitignore  AS_method.ipynb  Fresnel_transform_approach.py  README.md  ResNet18.ipynb  band-limited_implementation_pytorch.ipynb  bandLimitedAngularSpectrumMethod.py  band_limited_angular_spectrum_method.py  bandlimited_agular_spectrum_approach.py  data_processor.py  drafts.ipynb  exr2bin.py  generatePOH.py  learned_method.ipynb  main.py  neural_network.py  optics.py  phase_plain_version.ipynb  pyproject.toml  requirements.txt  trainingModel.py  utilities.py
ResNet18/: ResNet18.ipynb
jupyterNotebooks/: 2D_comparison.ipynb  ResNet18.ipynb  aboutAperture.ipynb  drafts.ipynb  paper_implement.ipynb
learnedMethodForHologram/: __init__.py  angular_spectrum_method.py  bandlimited_agular_spectrum_approach.py  bandlimited_angular_spectrum_approach.py  data_processor.py  metrics.py  neural_network.py  neural_network_components.py  optics.py  perceptual_loss.py  utilities.py  watermelon_v1.py  watermelon_v2.py  watermelon_v3.py  watermelon_v4.py
learnedMethodForHologram/watermelon/: watermelon_GAN.py
learnedMethodForHologram/watermelon_GAN/: AP2POH.py  RGBD2AP.py  __init__.py  data_proceccor.py  data_processor.py  discriminator.py  generator.py  loss_func.py  (+1 more)
tests/: __init__.py  test_angular_spectrum_method.py  test_bandlimited_agular_spectrum_approach.py  test_blasm_v2_v3_wGrid_transferFunction.py  test_blasm_v2_v3_wGrid_transferFunction_generator.py  test_learn_wave_propagator_odak.py
warmingUp/: aboutBandLimitedAngularSpectrumMethod.ipynb  aboutResNet18.ipynb
(+10 files in other folders)
