[project]
name = "learnedMethodForHologram"
authors = [{name = "Weijie Xie", email = "xwj.harry@gmail.com"}]
version = "0.1.0"
dependencies = [
    "numpy==1.24.3",
    "torch==2.1.2",
    "torchvision==0.16.2",
    "matplotlib==3.8.1",
    "Imath",
    "openexr",
    "torchmetrics",
    "gdown"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["learnedMethodForHologram", "learnedMethodForHologram.*", "test"]
exclude = ["tests.tests_odak"]
